# vex-tm-obs-sync

./: .gitignore  README.md  build.py  mypy.ini  pyproject.toml  settings.yml  vex-tm-obs-sync.spec
.github/workflows/: build.yml
src/vex_tm_obs_sync/: config.py  main.py  sync.py
